# mindbox_test

./: README.md  pyproject.toml
mindbox_task_1/: geometric_figure.py
mindbox_task_2/: from_sqlite.py  run_prepare_db.py  run_pyspark_task.py  sqlite.db
mindbox_task_2/prepare_db/: db.py  facke_data.py  insert_data.py  models.py
mindbox_test/: geometric_figure.py
tests/: test_geometric_figure.py
